# connectible-project

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  FINDINGS.md  Makefile  PLAN.md  README.md  RULES.md  TASKS-v0.1.0.md  TASKS.md  build-apk.sh
.claude/: launch.json
.github/workflows/: ci.yml  pages.yml  release.yml
daemon/: Cargo.toml  build.rs
daemon/migrations/: 0001_init.sql  0002_transfer_history.sql
daemon/packaging/: connectibled.service
daemon/src/: config.rs  error.rs  identity.rs  lib.rs  main.rs  proto.rs  ratelimit.rs  tls.rs
daemon/src/clipboard/: backend.rs  mod.rs  wayland_backend.rs
daemon/src/db/: history.rs  keys.rs  mod.rs  repository.rs
daemon/src/diagnostics/: cli.rs  environment.rs  features.rs  logbuf.rs  mod.rs  network.rs  pairing.rs
daemon/src/discovery/: mod.rs
daemon/src/grpc/: mod.rs  peer_identity.rs  service.rs
daemon/src/input/: backend.rs  mod.rs  wayland_backend.rs
daemon/src/pairing/: mod.rs
daemon/src/status/: mod.rs
daemon/src/transfer/: mod.rs  upload.rs
daemon/tests/: fault_injection.rs  grpc_smoke.rs  process_shutdown.rs  upload_transfer.rs
daemon/tests/common/: mod.rs
design-docs/: de-agnosticism-audit.md  logo-prompt.md  systemd-service.md
desktop/: README.md  package-lock.json  package.json  tailwind.config.js
desktop-backup/: README.md  index.html  package-lock.json  preview.html  vite.config.ts
desktop-backup/core/src/: lib.rs  tls.rs
desktop-backup/core/tests/: desktop_core_e2e.rs
desktop-backup/docs/: ADR-001-desktop-transport.md
desktop-backup/src/: main.tsx  preview.tsx  theme.ts
desktop-backup/src-tauri/capabilities/: default.json
desktop-backup/src-tauri/src/: events.rs  state.rs  tray.rs
desktop-backup/src/components/: ClipboardPanel.test.tsx  DeviceListPanel.test.tsx  EmptyState.tsx  ErrorState.tsx  HomePanel.test.tsx  HomePanel.tsx  Icon.tsx  LanguageSwitcher.tsx  NotificationsPanel.test.tsx  PairingDialog.test.tsx  RemoteInputPanel.test.tsx  Sidebar.test.tsx  StatusBar.test.tsx  TransferPanel.test.tsx  TransferPanel.tsx
desktop-backup/src/hooks/: useDaemon.test.ts
desktop-backup/src/i18n/locales/: en.json  tr.json
desktop-backup/src/lib/: errors.test.ts  format.test.ts  format.ts  ipc.ts
desktop/core/: Cargo.toml
desktop/core/src/: dto.rs  lib.rs  local.rs  remote.rs
desktop/core/tests/: desktop_core_e2e.rs
desktop/src/: App.tsx  preview.tsx  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  tray.rs
desktop/src/components/: ClipboardPanel.test.tsx  ClipboardPanel.tsx  ConnectionDoctorPanel.test.tsx  ConnectionDoctorPanel.tsx  DeviceListPanel.test.tsx  DeviceListPanel.tsx  HomePanel.test.tsx  HomePanel.tsx  NotificationsPanel.test.tsx  NotificationsPanel.tsx  PairingDialog.test.tsx  PairingDialog.tsx  PairingQrDialog.test.tsx  PairingQrDialog.tsx  RemoteInputPanel.tsx  SettingsPanel.test.tsx  SettingsPanel.tsx  Sidebar.tsx  StatusBar.tsx  TransferPanel.test.tsx  TransferPanel.tsx
desktop/src/hooks/: useDaemon.test.ts  useDaemon.ts
desktop/src/i18n/: index.tsx
desktop/src/i18n/locales/: en.json  tr.json
desktop/src/lib/: base64.test.ts  base64.ts  errors.ts  format.test.ts  format.ts  ipc.ts  pairingCode.test.ts  pairingCode.ts  types.ts
docs/: ARCHITECTURE.md  RULES.md  TASKS-audit-fixes.md  TASKS.md  api-reference.md  changelog.html  developer-guide.md  index.html  tofu-trust-store.md  user-guide.md
docs/archive/: EKSIKLER-RAPOR.md  PLAN.md  REVIEW-2026-07-15.md  TASKS-v0.1.0.md  TASKS-v1.0-completion-roadmap.md  TASKS-v1.0-filetransfer.md  TASKS-v1.0-pairing-ui.md
docs/context/: context.md  conventions.md  decisions.md  file-map.md  glossary.md  known-issues.md  progress.md
docs/design/: battery-measurement.md  chunk-reject-mechanism.md  db-encryption.md  error-code-mapping.md  manual-test-log.md  perf-measurements.md
docs/guide/: clipboard.html  files.html  index.html  notifications.html  pairing.html  remote-input.html  troubleshooting.html
docs/prompts/: audit-fix-prompt.md
mobile/: README.md  analysis_options.yaml  pubspec.yaml
mobile-flutter-backup/: README.md  pubspec.yaml
mobile-flutter-backup/lib/: main.dart
mobile-flutter-backup/lib/src/: app.dart
mobile-flutter-backup/lib/src/i18n/: strings.dart
mobile-flutter-backup/lib/src/models/: models.dart
mobile-flutter-backup/lib/src/screens/: home_screen.dart  remote_input_screen.dart  settings_screen.dart
mobile-flutter-backup/lib/src/services/: connectible_exception.dart  (+5 more)
mobile-flutter-backup/linux/: CMakeLists.txt
mobile-flutter-backup/linux/runner/: my_application.cc
mobile-flutter-backup/test/: clipboard_model_test.dart  device_list_model_test.dart  file_util_test.dart  notification_listener_test.dart  notification_model_test.dart  pairing_countdown_urgency_test.dart  pairing_model_test.dart  reconnect_backoff_test.dart
mobile-flutter-backup/test/integration/: daemon_integration_test.dart  server_pairing_test.dart
mobile-flutter-backup/test/screens/: settings_screen_test.dart  transfers_screen_test.dart
mobile-flutter-backup/tool/: gen_proto.sh
mobile-rn/: .gitignore  app.json
mobile/android/app/: build.gradle.kts
mobile/lib/src/: app_info.dart
mobile/test/: battery_model_test.dart  clipboard_model_test.dart  crc32_test.dart  device_list_model_test.dart  doctor_test.dart  file_transfer_model_test.dart  notification_listener_test.dart  notification_model_test.dart  pairing_manager_test.dart  pairing_model_test.dart  receiving_service_test.dart  save_file_service_test.dart  widget_test.dart
mobile/test/integration/: daemon_integration_test.dart
mobile/test/screens/: clipboard_screen_test.dart  home_screen_test.dart  pair_landing_screen_test.dart  pair_scan_screen_test.dart  remote_input_screen_test.dart  settings_screen_test.dart  shell_test.dart  test_scaffold.dart  transfers_screen_test.dart
mobile/test/services/: mdns_multicast_lock_test.dart
mobile/test/widgets/: ui_test.dart
mobile/tool/: battery_measure.sh
proto/: connectible.proto
(+48 files in other folders)
