[package]
name = "connectibled"
version = "0.1.0"
edition = "2021"
description = "Connectible daemon: gRPC sync server for cross-device clipboard/file/input sync"

[[bin]]
name = "connectibled"
path = "src/main.rs"

[dependencies]
anyhow = "1"
tonic = { version = "0.14", features = ["tls-ring"] }
tonic-prost = "0.14"
prost = "0.14"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time", "fs", "io-util", "net"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# TLS 1.3 (rustls) - tonic's built-in tls_config() cannot restrict the
# negotiated protocol version (it always allows TLS 1.2 fallback), so
# the daemon builds its own rustls::ServerConfig restricted to TLS 1.3
# only (see src/tls.rs) and feeds already-accepted TLS streams to tonic
# via Server::serve_with_incoming. rcgen generates the self-signed cert
# on first run.
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rcgen = "0.13"

# mDNS discovery/advertisement.
mdns-sd = "0.13"

# Storage.
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }

# Logging.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Errors.
thiserror = "2"

# Async trait objects (diagnostics Check registry, Phase F). Already in the
# tree via tonic, so this pulls nothing new.
async-trait = "0.1"

# Crypto/util.
rand = "0.8"
subtle = "2"
sha2 = "0.10"
hex = "0.4"
crc32fast = "1"
uuid = { version = "1", features = ["v4"] }

# Config/paths.
directories = "5"
serde = { version = "1", features = ["derive"] }
hostname = "0.4"
x11-clipboard = "0.9"
x11rb = "0.13"
wayland-client = "0.31.14"
wayland-protocols-wlr = { version = "0.3.12", features = ["client"] }
wayland-protocols = { version = "0.32.13", features = ["client", "unstable"] }
wayland-protocols-misc = { version = "0.3.12", features = ["client"] }
xkbcommon = { version = "0.9.0", features = ["wayland"] }
# memfd_create (XKB keymap upload) and pipe (clipboard data transfer fd)
# for the Wayland backends; already present transitively via
# wayland-backend, promoted to a direct dependency here.
rustix = { version = "1.1", default-features = false, features = ["std", "fs", "pipe"] }

[build-dependencies]
tonic-build = "0.14"
tonic-prost-build = "0.14"

[dev-dependencies]
tempfile = "3"
async-stream = "0.3"
tracing-test = "0.2.6"
# Used by tests/upload_transfer.rs to compute the expected whole-file
# SHA-256 a sender would declare in PrepareUpload; same versions as the
# normal deps above so the hashing matches the daemon's byte-for-byte.
sha2 = "0.10"
hex = "0.4"
