[package]
name = "connectible-desktop-core"
version = "0.1.0"
edition = "2021"
description = "Daemon-client core for the Connectible desktop app: loopback UI RPCs, remote pairing/transfer clients. Kept free of any webview dependency so it builds and tests everywhere the daemon does."

[lib]
name = "connectible_desktop_core"
path = "src/lib.rs"

[dependencies]
# The daemon crate doubles as the protocol library: generated proto
# types, tonic client stubs, and the chunked-transfer sender all come
# from here, so the desktop can never drift from the daemon's wire
# format.
connectibled = { path = "../../daemon" }

tonic = { version = "0.14", features = ["tls-ring"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }
tokio-stream = "0.1"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
# Streaming whole-file SHA-256 for the dedicated upload path
# (remote.rs `upload_file`/`hash_file`), declared in PrepareUpload and
# matched byte-for-byte by the daemon receiver's own digest.
sha2 = "0.10"
hex = "0.4"
directories = "5"
# Enumerate local network interfaces so the desktop can show its own
# LAN address for the "connect by address" reverse direction (the
# webview can't read interfaces itself). Already in the tree via
# mdns-sd, so this pins no new version.
if-addrs = "0.13"

[dev-dependencies]
tempfile = "3"
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
