# Tauri shell for the Connectible desktop app. Deliberately thin: all
# daemon-client logic lives in ../core (connectible-desktop-core),
# which builds and tests without any webview dependency. This crate
# only wires Tauri commands, events, and the system tray to that core.
#
# NOTE: building this crate requires webkit2gtk-4.1 (Linux). On systems
# with only webkitgtk-6.0 (GTK4) installed, install the 4.1 series
# first; see desktop/README.md.
[package]
name = "connectible-desktop"
version = "0.1.0"
edition = "2021"
description = "Connectible desktop app (Tauri v2 shell)"

[lib]
name = "connectible_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-opener = "2"

connectible-desktop-core = { path = "../core" }
connectibled = { path = "../../daemon" }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hostname = "0.4"
sha2 = "0.10"
hex = "0.4"
